--- a/jiao.html
+++ b/jiao.html
@@ -66,7 +66,7 @@
 												</dl>
 									<div class="col-6 col-12-small">
 										<ul class="actions stacked">
-										<li><a href="https://github.com/BclCraft/BCL-1.20-integration-package" class="button icon solid fa-download primary  fit">点击下载1.20整合包（GitHub）</a></li>
+										<li><a href="https://github.com/BclCraft/BCL-1.20-integration-package/releases" class="button icon solid fa-download primary  fit">点击下载1.20整合包（GitHub）</a></li>
 										</ul>
 										</div>
 									<ul class="actions fit">
