--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 									</header>
 									<ul class="alt">
 										<li>群组服务器：生存服+镜像服（生存服镜像）+创造服（超平坦）</li>
-										<li>服务器搭载64G运行内存 + i9-12900，最高睿频 5.1GHz</li>
+										<li>服务器搭载64G运行内存 + Intel® Core™ i9-12900，最高睿频 5.1GHz</li>
 										<li>服务器装配多种生电、优化mod</li>
 										<li>不定期服开展小游戏活动（非主服）</li>
 										<li>严格的白名单审核，提供高质量玩家氛围</li>
