--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 										<img src="https://gitee.com/Tiking-010/bcl-web/raw/master/cmd.webp" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="team.html" class="link">BCL 维护团队</a></h3>
-										<p>BCLcraft server Maintenance Team</p>
+										<h3><a href="team.html" class="link">BCL 团队</a></h3>
+										<p>BCLcraft server Team</p>
 									</header>
 								</article>
 							</section>
