--- a/team.html
+++ b/team.html
@@ -67,7 +67,7 @@
 							<h3>服主 &amp; 离线君主 </h3>
 							</header>
 						<div class="col-6 col-12-small">
-								<p><span class="image right"><img src="https://gitee.com/Tiking-010/bcl-web/raw/master/2d_lg.webp" alt="" /></span>昵称：李哥，游戏名：MC_ligr & MC__lige<br>现任BCL服务器服主，</p>
+								<p><span class="image right"><img src="https://gitee.com/Tiking-010/bcl-web/raw/master/2d_lg.webp" alt="" /></span>昵称：李哥，游戏名：MC_lige & MC__lige<br>现任BCL服务器服主，</p>
 								</div>
 								<header class="major">
 									<h3>建筑部长 &amp; 大股东</h3>
