--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE HTML>
-<html lang="zh">
+<!-- 
+ ____            ___    ____                      ___  __      
+/\  _`\         /\_ \  /\  _`\                  /'___\/\ \__   
+\ \ \L\ \    ___\//\ \ \ \ \/\_\  _ __    __   /\ \__/\ \ ,_\  
+ \ \  _ <'  /'___\\ \ \ \ \ \/_/_/\`'__\/'__`\ \ \ ,__\\ \ \/  
+  \ \ \L\ \/\ \__/ \_\ \_\ \ \L\ \ \ \//\ \L\.\_\ \ \_/ \ \ \_ 
+   \ \____/\ \____\/\____\\ \____/\ \_\\ \__/.\_\\ \_\   \ \__\
+    \/___/  \/____/\/____/ \/___/  \/_/ \/__/\/_/ \/_/    \/__/
+                                                               
+ -->
+<html lang="zh-CN">
 	<head>
 		<title>BCL生电服务器 | 主页</title>
 		<meta charset="utf-8" />
 		<meta name="keywords" content="BCL,BclCraft,BCLcraft,bcl,">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/gb.css" />
 		<link rel="shortcut icon" href="images/cd.ico"/>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
