--- a/404.html
+++ b/404.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
-<html>
+<!-- 
+ ____            ___    ____                      ___  __      
+/\  _`\         /\_ \  /\  _`\                  /'___\/\ \__   
+\ \ \L\ \    ___\//\ \ \ \ \/\_\  _ __    __   /\ \__/\ \ ,_\  
+ \ \  _ <'  /'___\\ \ \ \ \ \/_/_/\`'__\/'__`\ \ \ ,__\\ \ \/  
+  \ \ \L\ \/\ \__/ \_\ \_\ \ \L\ \ \ \//\ \L\.\_\ \ \_/ \ \ \_ 
+   \ \____/\ \____\/\____\\ \____/\ \_\\ \__/.\_\\ \_\   \ \__\
+    \/___/  \/____/\/____/ \/___/  \/_/ \/__/\/_/ \/_/    \/__/
+                                                               
+ -->
+<html lang="zh-CN">
 	<head>
 		<meta charset="utf-8">
 		<title>404</title>
