--- a/jiao.html
+++ b/jiao.html
@@ -1,4 +1,15 @@
 <!DOCTYPE HTML>
+<!-- 
+ ____            ___    ____                      ___  __      
+/\  _`\         /\_ \  /\  _`\                  /'___\/\ \__   
+\ \ \L\ \    ___\//\ \ \ \ \/\_\  _ __    __   /\ \__/\ \ ,_\  
+ \ \  _ <'  /'___\\ \ \ \ \ \/_/_/\`'__\/'__`\ \ \ ,__\\ \ \/  
+  \ \ \L\ \/\ \__/ \_\ \_\ \ \L\ \ \ \//\ \L\.\_\ \ \_/ \ \ \_ 
+   \ \____/\ \____\/\____\\ \____/\ \_\\ \__/.\_\\ \_\   \ \__\
+    \/___/  \/____/\/____/ \/___/  \/_/ \/__/\/_/ \/_/    \/__/
+                                                               
+ -->
+<html lang="zh-CN">
 <head>
 		<title>BCL生电服务器 | 进入方法</title>
 		<meta charset="utf-8" />
