--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<head>
 		<title>BCL生电服务器 | 主页</title>
 		<meta charset="utf-8" />
-		<meta name="keywords" content="BCL,BclCraft,BCLcraft,bcl,">
+		<meta name="keywords" content="BCL,BclCraft,BCLcraft,bcl,生电">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/gb.css" />
