--- a/jiao.html
+++ b/jiao.html
@@ -47,7 +47,7 @@
 					<section id="banner" class="style2">
 						<div class="inner">
 							<span class="image">
-								<img src="images/pic17.jpg" alt="" />
+								<img src="https://store-images.s-microsoft.com/image/apps.58378.14492077886571533.338a563a-86e7-47b1-b9dc-41cf411f5dcd.dc840f22-6e8f-4a59-b7bc-57958a0740fd?q=90&w=480&h=270" alt="" />
 							</span>
 							<header class="major">
 								<h1>如何进入服务器</h1>
@@ -65,7 +65,7 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a class="image">
-										<img src="images/zbgm.png" alt="" data-position="top center" />
+										<img src="./images/zbgm.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
