--- a/jiao.html
+++ b/jiao.html
@@ -38,7 +38,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Imagine Server</strong> <span>官方网站</span></a>
+						<a href="index.html" class="logo"><strong>BCLcraft</strong> <span>官方网站</span></a>
 					</header>
 
 				
